--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
            
             <div class="imagen-historia" data-aos="fade-left" data-aos-offset="200" data-aos-delay="50"
                     data-aos-duration="1000">
-                    <img  loading="lazy" src="img/sms2.jpg" alt="">
+                    <img  loading="lazy" src="img/anexo19_4.png" alt="">
                 </div>
 
         </div>
