--- a/index.html
+++ b/index.html
@@ -276,9 +276,9 @@
                             <h3>EMERGENCIA</h3>
                         </div>
                         <div class="informacion-servicio">
-                            <p style="text-align: justify;">Incendio en las edificaciones de la OMA principal de ESTELAR TECHNIK.</p>
+                            <p style="text-align: justify;">Incendio en las edificaciones.</p>
                                 <div class="boton-contacto">
-                                    <a href="tarjeta1.html" class="boton-primario azul">Tarjetas de Acción</a>
+                                    <a href="#" class="boton-primario azul">Tarjetas de Acción</a>
                                 </div>
                         </div>
                     </div>
@@ -292,7 +292,7 @@
                     
                     <p style="text-align: justify;">Incidencias en las operaciones por mercancia peligrosas.</p>
                         <div class="boton-contacto">
-                            <a href="tarjeta4.html" class="boton-primario azul">Tarjetas de Acción</a>
+                            <a href="#" class="boton-primario azul">Tarjetas de Acción</a>
                         </div>
                 </div>
             </div>
