--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                    
                     <div class="card">
                         <div class="icono-card">
-                            <a href="#">
+                            <a href="comunicaciones.html">
                                 <i class="fas fa-wrench"></i>
                             </a>
                         </div>
