--- a/comunicaciones.html
+++ b/comunicaciones.html
@@ -22,13 +22,13 @@
           <div class="row galeria">
                <div class="col s12 m4 l3">
                     <div class="material-placeholder">
-                         <img src="comunicaciones/1.png" alt="" class="responsive-img materialboxed" data-caption="Boletin Enero.">
+                         <img src="comunicaciones/2.png" alt="" class="responsive-img materialboxed" data-caption="Boletin 001 2025.">
                     </div>
                </div>
                
                <div class="col s12 m4 l3">
                     <div class="material-placeholder">
-                         <img src="comunicaciones/2.png" alt="" class="responsive-img materialboxed" data-caption="Boletin Febrero.">
+                         <img src="comunicaciones/2.png" alt="" class="responsive-img materialboxed" data-caption="Boletin 002 2025.">
                     </div>
                </div>
                
