--- a/index2.html
+++ b/index2.html
@@ -18,7 +18,7 @@
         <div class="contact-info">
           <h3 class="title">Sistema de Reporte SMS</h3>
           <p style="text-align: justify;">
-            El sistema de Reporte de Peligros, es una herramienta desarrollada por la Coordinación de SMS de ESTELAR TECHNIK. Que permite Identificar Peligros de manera Voluntaria, Confidencial y no Punitiva.
+            El sistema de Reporte de Peligros, es una herramienta desarrollada por la Gerencia de SMS de AeroSolutionsVenezuela. Que permite Identificar Peligros de manera Voluntaria, Confidencial y no Punitiva.
           </p>
 
           <div class="info">
