--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="texto-beneficios">
             <h2>Políticas</h2>
             <div class="boton-beneficios">
-                <a href="#" class="boton-primario amarillo">SMS &rtrif;</a>
+                <a href="politica.html" class="boton-primario amarillo">SMS &rtrif;</a>
             </div>
         </div>
         <div class="iconos-beneficios" data-aos="fade-right" data-aos-offset="200" data-aos-delay="50"
