--- a/politica.html
+++ b/politica.html
@@ -22,13 +22,13 @@
           <div class="row galeria">
                <div class="col s12 m4 l3">
                     <div class="material-placeholder">
-                         <img src="politica/1.jpg" alt="" class="responsive-img materialboxed" data-caption="Política SMS.">
+                         <img src="img/1.jpg" alt="" class="responsive-img materialboxed" data-caption="Política SMS.">
                     </div>
                </div>
                
                <div class="col s12 m4 l3">
                     <div class="material-placeholder">
-                         <img src="politica/2.jpg" alt="" class="responsive-img materialboxed" data-caption="Política Gestión de Riesgo.">
+                         <img src="" alt="" class="responsive-img materialboxed" data-caption="Política Gestión de Riesgo.">
                     </div>
                </div>
                
